--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -124,13 +124,7 @@ a:hover {
     color: purple;
 }
 
-.nav-bar {
-    display: flex;
-    justify-content: flex-end;
-    list-style-type: none;
-    text-transform: uppercase;
-    font-size: 12px;
-}
+
 
 li {
     margin: 15px 15px;
@@ -189,5 +183,54 @@ form {
 .far {
     margin: 3px;
 }
+
+.hamburger {
+    border: 0;
+    background-color: transparent;
+    margin-top: 15px;
+}
+
+.nav-bar {
+    display: none;
+}
+
+.nav-bar li {
+    background-color: white;
+    padding: 5px 30px;
+    border-radius: 4px;
+    margin: 1px;
+}
+
+@media only screen and (min-width: 700px) {
+    .hamburger {
+        display: none;
+    }
+
+    .nav-bar {
+        display: flex;
+        justify-content: flex-end;
+        list-style-type: none;
+        text-transform: uppercase;
+        font-size: 12px;
+    }
+
+    .nav-bar li {
+        margin: 15px 5px;
+        background-color: transparent;
+    }
+}
+
+.hamburger:focus {
+    outline: none;
+}
+
+.nav-bar.show {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    text-transform: uppercase;
+    font-size: 12px;
+}
+
 
 
